# ClawShell

./: .gitignore  CLOUD_HUB_DEPLOY.md  INSTALL_BEST_PRACTICES.md  LICENSE  MANIFEST.json  README.md  RELEASE_v1.11.0.md  RELEASE_v1.12.0.md  RELEASE_v2.1.1.md  analyst.py  brain.py  clawshell-cloud  eventbus.py  hermes_cron.py  memory_server.py  pyproject.toml  skills.py  tasks.py
cloud/: __init__.py  config.py  main.py  middleware.py  nodes.py  websocket.py
deploy/: Dockerfile  docker-compose.yml  init-db.sql  nginx.conf
docs/: ARCHITECTURE.md  ARCHITECTURE_v1.12.0.html  CHANGELOG.md  CORE_DEFINITION.md  ClawShell-v2.1-Ruflo-Adaptation-Plan.md  ClawShell2.0-CleanRoom-Rebuild-Plan.md  INSTALL_BEST_PRACTICES.md  REPO_COMPARISON_ANALYSIS.md  WUKONG_INTEGRATION.md  architecture-diagram.html
edge/: __init__.py  cli.py  exoskeleton_daemon.py
exoskeleton/: __init__.py
fc/: fc_handler.py  template.yml
shared/: __init__.py  config.py  constants.py  logging_setup.py  mcp_types.py  models.py  protocol.py  types.py  utils.py
storage/: __init__.py  memory_store.py
tests/: test_comprehensive.py  test_exoskeleton_daemon.py  test_hnsw_engine.py  test_hook_manager.py  test_integration_engines.py  test_integration_events.py  test_integration_hooks.py  test_integration_memory.py  test_integration_plugin.py  test_integration_topology.py  test_integration_trust.py  test_phase1.py  test_phase1_mcp.py  test_phase2.py  test_phase2_eventing.py  test_phase3_new_engines.py  test_plugin_lifecycle.py  test_shared_smoke.py  test_topology_manager.py  test_trust_evaluator.py  (+1 more)
(+285 files in other folders)
